--- a/gdal_python_basics.ipynb
+++ b/gdal_python_basics.ipynb
@@ -31,12 +31,12 @@
     }
    ],
    "source": [
-    "dem_ds = gdal.Open('data/digital_elevation_model.tif', gdal.GA_ReadOnly)\n",
-    "print ('Basic metadata')\n",
-    "print ('Bands count: %s' % dem_ds.RasterCount)\n",
-    "print ('Rows: %s | Cols: %s' % (dem_ds.RasterYSize, dem_ds.RasterXSize))\n",
-    "print ('GeoTransform: %s' % str(dem_ds.GetGeoTransform()))\n",
-    "print ('Coordinate reference system: %s' % dem_ds.GetProjection())"
+    "dem_ds = gdal.Open(\"data/digital_elevation_model.tif\", gdal.GA_ReadOnly)\n",
+    "print(\"Basic metadata\")\n",
+    "print(\"Bands count: %s\" % dem_ds.RasterCount)\n",
+    "print(\"Rows: %s | Cols: %s\" % (dem_ds.RasterYSize, dem_ds.RasterXSize))\n",
+    "print(\"GeoTransform: %s\" % str(dem_ds.GetGeoTransform()))\n",
+    "print(\"Coordinate reference system: %s\" % dem_ds.GetProjection())"
    ]
   },
   {
@@ -62,8 +62,8 @@
     "dem_ds_band1 = dem_ds.GetRasterBand(1)\n",
     "dem_ds_band1_data = dem_ds_band1.ReadAsArray()\n",
     "\n",
-    "print (dem_ds_data.shape)\n",
-    "print (dem_ds_band1_data.shape)"
+    "print(dem_ds_data.shape)\n",
+    "print(dem_ds_band1_data.shape)"
    ]
   },
   {
@@ -90,10 +90,10 @@
    ],
    "source": [
     "# значение высоты в ячейке 50, 50\n",
-    "print (dem_ds_data[50,50])\n",
+    "print(dem_ds_data[50, 50])\n",
     "\n",
     "# срез высот\n",
-    "print (dem_ds_data[40:48,40:48])\n"
+    "print(dem_ds_data[40:48, 40:48])\n"
    ]
   },
   {
@@ -137,9 +137,9 @@
    "source": [
     "# вычисление координат конкретной ячейки (50;50) на основе GeoTransform\n",
     "gt = dem_ds.GetGeoTransform()\n",
-    "x_coord = gt[0] + 50*gt[1]\n",
-    "y_coord = gt[3] + 50*gt[5]\n",
-    "print (x_coord, y_coord)"
+    "x_coord = gt[0] + 50 * gt[1]\n",
+    "y_coord = gt[3] + 50 * gt[5]\n",
+    "print(x_coord, y_coord)"
    ]
   },
   {
@@ -159,11 +159,11 @@
    ],
    "source": [
     "# средняя высота всего участка территории\n",
-    "print (dem_ds_data.mean())\n",
+    "print(dem_ds_data.mean())\n",
     "\n",
     "# маска для ячеек со значением > 1500\n",
     "high_elevations = dem_ds_data[dem_ds_data > 1500]\n",
-    "print (high_elevations.shape[0])"
+    "print(high_elevations.shape[0])"
    ]
   },
   {
@@ -182,11 +182,11 @@
     }
    ],
    "source": [
-    "imagery_ds = gdal.Open('data/multiband_imagery.tif', gdal.GA_ReadOnly)\n",
-    "print ('Bands count: %s' % imagery_ds.RasterCount)\n",
+    "imagery_ds = gdal.Open(\"data/multiband_imagery.tif\", gdal.GA_ReadOnly)\n",
+    "print(\"Bands count: %s\" % imagery_ds.RasterCount)\n",
     "\n",
     "imagery_ds_data = imagery_ds.ReadAsArray()\n",
-    "print (imagery_ds_data.shape)"
+    "print(imagery_ds_data.shape)"
    ]
   },
   {
@@ -209,12 +209,17 @@
    "source": [
     "# описываем функцию, которая будет нормализовать значения канала в диапазон от 0 до 1\n",
     "def normalize(input_band):\n",
-    "    min_value, max_value = input_band.min()*1.0, input_band.max()*1.0\n",
-    "    return ((input_band*1.0 - min_value*1.0)/(max_value*1.0 - min_value))\n",
+    "    min_value, max_value = input_band.min() * 1.0, input_band.max() * 1.0\n",
+    "    return (input_band * 1.0 - min_value * 1.0) / (max_value * 1.0 - min_value)\n",
     "\n",
-    "rgb_normalized = np.dstack([normalize(imagery_ds_data[2]),\n",
-    "                            normalize(imagery_ds_data[1]),\n",
-    "                            normalize(imagery_ds_data[0])])\n",
+    "\n",
+    "rgb_normalized = np.dstack(\n",
+    "    [\n",
+    "        normalize(imagery_ds_data[2]),\n",
+    "        normalize(imagery_ds_data[1]),\n",
+    "        normalize(imagery_ds_data[0]),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "plt.imshow(rgb_normalized)\n",
     "plt.show()"
@@ -247,10 +252,12 @@
    ],
    "source": [
     "# Вычисляем NDVI\n",
-    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (imagery_ds_data[3] + imagery_ds_data[2])\n",
+    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (\n",
+    "    imagery_ds_data[3] + imagery_ds_data[2]\n",
+    ")\n",
     "\n",
-    "# применяем жёлто-зелёную шкалу от 0 до 1. Чем зеленее, тем больше NDVI \n",
-    "plt.imshow(ndvi, cmap='YlGn', vmin=0, vmax=1)\n",
+    "# применяем жёлто-зелёную шкалу от 0 до 1. Чем зеленее, тем больше NDVI\n",
+    "plt.imshow(ndvi, cmap=\"YlGn\", vmin=0, vmax=1)\n",
     "plt.colorbar()\n",
     "plt.show()"
    ]
@@ -292,20 +299,20 @@
    ],
    "source": [
     "# данные из архива (vsizip)\n",
-    "ds_from_zip = gdal.Open('/vsizip/data/land_cover_types.zip/land_cover_types.tif')\n",
+    "ds_from_zip = gdal.Open(\"/vsizip/data/land_cover_types.zip/land_cover_types.tif\")\n",
     "ds_from_zip_data = ds_from_zip.ReadAsArray()\n",
-    "print ('Срез данных в растре из архива:')\n",
-    "print (ds_from_zip_data[100:105,100:105])\n",
+    "print(\"Срез данных в растре из архива:\")\n",
+    "print(ds_from_zip_data[100:105, 100:105])\n",
     "\n",
     "# данные из сетевого хранилища (vsicurl)\n",
-    "ds_from_url = gdal.Open('/vsicurl/https://demo.nextgis.com/api/resource/7220/cog')\n",
-    "print ('\\nРазмер сетевого растра:')\n",
+    "ds_from_url = gdal.Open(\"/vsicurl/https://demo.nextgis.com/api/resource/7220/cog\")\n",
+    "print(\"\\nРазмер сетевого растра:\")\n",
     "print(ds_from_url.RasterXSize)\n",
     "print(ds_from_url.RasterYSize)\n",
     "\n",
     "# Читаем конкретные значения, не скачивая весь растр\n",
-    "print('4 пикселя начиная с адреса 10000, 10000. Все каналы:')\n",
-    "print(ds_from_url.ReadAsArray(10000,10000,2,2))"
+    "print(\"4 пикселя начиная с адреса 10000, 10000. Все каналы:\")\n",
+    "print(ds_from_url.ReadAsArray(10000, 10000, 2, 2))"
    ]
   },
   {
@@ -326,19 +333,19 @@
    ],
    "source": [
     "# возвращаемся к набору dem_ds и перепроецируем его\n",
-    "dem_ds_transformed = gdal.Warp('',dem_ds, format='MEM', dstSRS='EPSG:32634')\n",
+    "dem_ds_transformed = gdal.Warp(\"\", dem_ds, format=\"MEM\", dstSRS=\"EPSG:32634\")\n",
     "\n",
     "# И всё готово, в переменной dem_ds_transformed хранящийся в памяти gdal.Dataset готовый к работе\n",
     "# читаем и смотрим на GeoTransform\n",
     "gt = dem_ds_transformed.GetGeoTransform()\n",
-    "print ('Новый GeoTransform:')\n",
-    "print (gt)\n",
+    "print(\"Новый GeoTransform:\")\n",
+    "print(gt)\n",
     "# читаем перепроецированную матрицу значений и применяем маску\n",
     "dem_ds_transformed_data = dem_ds_transformed.ReadAsArray()\n",
     "high_elevations = dem_ds_transformed_data[dem_ds_transformed_data > 1500]\n",
     "\n",
-    "total_area = high_elevations.shape[0] * (abs(gt[1])*abs(gt[5])) / 1000000\n",
-    "print ('Общая площадь районов с высотой > 1500 м: %s км2' % round(total_area,3))\n",
+    "total_area = high_elevations.shape[0] * (abs(gt[1]) * abs(gt[5])) / 1000000\n",
+    "print(\"Общая площадь районов с высотой > 1500 м: %s км2\" % round(total_area, 3))\n",
     "\n",
     "del dem_ds_transformed"
    ]
@@ -363,7 +370,8 @@
    "source": [
     "# Посмотрим на исходные данные как на RGB картинку\n",
     "import matplotlib.image as mpimg\n",
-    "image = mpimg.imread('data/topomap.tif')\n",
+    "\n",
+    "image = mpimg.imread(\"data/topomap.tif\")\n",
     "plt.imshow(image)\n",
     "plt.show()"
    ]
@@ -387,11 +395,18 @@
    ],
    "source": [
     "# отправим их в gdal.Translate с двумя заданиями - конвертация формата и загрубление пространственного разрешения\n",
-    "topomap_converted = gdal.Translate('data/topomap_converted.png','data/topomap.tif',format='PNG',xRes=20,yRes=20, creationOptions=[\"WORLDFILE=YES\"])\n",
+    "topomap_converted = gdal.Translate(\n",
+    "    \"data/topomap_converted.png\",\n",
+    "    \"data/topomap.tif\",\n",
+    "    format=\"PNG\",\n",
+    "    xRes=20,\n",
+    "    yRes=20,\n",
+    "    creationOptions=[\"WORLDFILE=YES\"],\n",
+    ")\n",
     "del topomap_converted\n",
     "\n",
     "# Смотрим на новый растр\n",
-    "image = mpimg.imread('data/topomap_converted.png')\n",
+    "image = mpimg.imread(\"data/topomap_converted.png\")\n",
     "plt.imshow(image)\n",
     "plt.show()"
    ]
@@ -413,9 +428,11 @@
    ],
    "source": [
     "# открываем данные и считаем NDVI\n",
-    "imagery_ds = gdal.Open('data/multiband_imagery.tif', gdal.GA_ReadOnly)\n",
+    "imagery_ds = gdal.Open(\"data/multiband_imagery.tif\", gdal.GA_ReadOnly)\n",
     "imagery_ds_data = imagery_ds.ReadAsArray()\n",
-    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (imagery_ds_data[3] + imagery_ds_data[2])\n",
+    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (\n",
+    "    imagery_ds_data[3] + imagery_ds_data[2]\n",
+    ")\n",
     "\n",
     "# записываем матрицу в новый файл\n",
     "# Выбираем драйвер (формат выходного файла)\n",
@@ -428,7 +445,13 @@
     "data_type = gdal.GDT_Float32\n",
     "\n",
     "# Создаём файл на основе выбранного драйвера, наследуя размер у исходного набора\n",
-    "dataset = driver.Create('data/ndvi.tif', imagery_ds.RasterXSize, imagery_ds.RasterYSize, band_count, data_type)\n",
+    "dataset = driver.Create(\n",
+    "    \"data/ndvi.tif\",\n",
+    "    imagery_ds.RasterXSize,\n",
+    "    imagery_ds.RasterYSize,\n",
+    "    band_count,\n",
+    "    data_type,\n",
+    ")\n",
     "\n",
     "# Заимствуем GeoTransform и систему координат у исходного растра (новый такой же, т.к. произведен в его пространственном домене)\n",
     "dataset.SetProjection(imagery_ds.GetProjection())\n",
