Improved code readability

--- a/gdal_python_basics.ipynb
+++ b/gdal_python_basics.ipynb
@@ -136,9 +136,15 @@
    ],
    "source": [
     "# вычисление координат конкретной ячейки (50;50) на основе GeoTransform\n",
-    "gt = dem_ds.GetGeoTransform()\n",
-    "x_coord = gt[0] + 50 * gt[1]\n",
-    "y_coord = gt[3] + 50 * gt[5]\n",
+    "geotransform = dem_ds.GetGeoTransform()\n",
+    "origin_x = geotransform[0]\n",
+    "origin_y = geotransform[3]\n",
+    "pixel_size_x = geotransform[1]\n",
+    "pixel_size_y = geotransform[5]\n",
+    "\n",
+    "x_coord = origin_x + 50 * pixel_size_x\n",
+    "y_coord = origin_y + 50 * pixel_size_y\n",
+    "\n",
     "print(x_coord, y_coord)"
    ]
   },
@@ -235,8 +241,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ekazakov\\AppData\\Local\\Temp\\ipykernel_6688\\954264092.py:2: RuntimeWarning: divide by zero encountered in divide\n",
-      "  ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (imagery_ds_data[3] + imagery_ds_data[2])\n"
+      "/tmp/ipykernel_369949/606193499.py:4: RuntimeWarning: divide by zero encountered in divide\n",
+      "  ndvi = (nir_band - red_band) / (nir_band + red_band)\n"
      ]
     },
     {
@@ -252,9 +258,9 @@
    ],
    "source": [
     "# Вычисляем NDVI\n",
-    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (\n",
-    "    imagery_ds_data[3] + imagery_ds_data[2]\n",
-    ")\n",
+    "red_band = imagery_ds_data[2]  # Красный канал\n",
+    "nir_band = imagery_ds_data[3]  # Ближний инфракрасный канал\n",
+    "ndvi = (nir_band - red_band) / (nir_band + red_band)\n",
     "\n",
     "# применяем жёлто-зелёную шкалу от 0 до 1. Чем зеленее, тем больше NDVI\n",
     "plt.imshow(ndvi, cmap=\"YlGn\", vmin=0, vmax=1)\n",
@@ -337,14 +343,17 @@
     "\n",
     "# И всё готово, в переменной dem_ds_transformed хранящийся в памяти gdal.Dataset готовый к работе\n",
     "# читаем и смотрим на GeoTransform\n",
-    "gt = dem_ds_transformed.GetGeoTransform()\n",
+    "geotransform = dem_ds_transformed.GetGeoTransform()\n",
     "print(\"Новый GeoTransform:\")\n",
-    "print(gt)\n",
+    "print(geotransform)\n",
+    "\n",
     "# читаем перепроецированную матрицу значений и применяем маску\n",
     "dem_ds_transformed_data = dem_ds_transformed.ReadAsArray()\n",
     "high_elevations = dem_ds_transformed_data[dem_ds_transformed_data > 1500]\n",
     "\n",
-    "total_area = high_elevations.shape[0] * (abs(gt[1]) * abs(gt[5])) / 1000000\n",
+    "pixel_size_x = abs(geotransform[1])\n",
+    "pixel_size_y = abs(geotransform[5])\n",
+    "total_area = high_elevations.shape[0] * (pixel_size_x * pixel_size_y) / 1000000\n",
     "print(\"Общая площадь районов с высотой > 1500 м: %s км2\" % round(total_area, 3))\n",
     "\n",
     "del dem_ds_transformed"
@@ -421,8 +430,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ekazakov\\AppData\\Local\\Temp\\ipykernel_6688\\3403560745.py:4: RuntimeWarning: divide by zero encountered in divide\n",
-      "  ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (imagery_ds_data[3] + imagery_ds_data[2])\n"
+      "/tmp/ipykernel_369949/1689867793.py:6: RuntimeWarning: divide by zero encountered in divide\n",
+      "  ndvi = (nir_band - red_band) / (nir_band + red_band)\n"
      ]
     }
    ],
@@ -430,9 +439,9 @@
     "# открываем данные и считаем NDVI\n",
     "imagery_ds = gdal.Open(\"data/multiband_imagery.tif\", gdal.GA_ReadOnly)\n",
     "imagery_ds_data = imagery_ds.ReadAsArray()\n",
-    "ndvi = (imagery_ds_data[3] - imagery_ds_data[2]) / (\n",
-    "    imagery_ds_data[3] + imagery_ds_data[2]\n",
-    ")\n",
+    "red_band = imagery_ds_data[2]  # Красный канал\n",
+    "nir_band = imagery_ds_data[3]  # Ближний инфракрасный канал\n",
+    "ndvi = (nir_band - red_band) / (nir_band + red_band)\n",
     "\n",
     "# записываем матрицу в новый файл\n",
     "# Выбираем драйвер (формат выходного файла)\n",
